--- a/free_fleet_examples/package.xml
+++ b/free_fleet_examples/package.xml
@@ -21,6 +21,11 @@
   <exec_depend>rmf_demos_tasks</exec_depend>
   <exec_depend>tf2_ros</exec_depend>
 
+  <test_depend>python3-pytest</test_depend>
+  <test_depend>ament_copyright</test_depend>
+  <test_depend>ament_flake8</test_depend>
+  <test_depend>ament_pep257</test_depend>
+
   <test_depend>ament_cmake_pytest</test_depend>
 
   <export>
