--- a/.github/workflows/nightly.yaml
+++ b/.github/workflows/nightly.yaml
@@ -1,10 +1,9 @@
 name: nightly
 
-# on:
-#   schedule:
-#     # 2am SGT
-#     - cron: '0 18 * * *'
-on: push
+on:
+  schedule:
+    # 2am SGT
+    - cron: '0 18 * * *'
 defaults:
   run:
     shell: bash
