--- a/free_fleet_examples/config/fleet/nav2_tb3_simulation_fleet_config.yaml
+++ b/free_fleet_examples/config/fleet/nav2_tb3_simulation_fleet_config.yaml
@@ -29,7 +29,6 @@ rmf_fleet:
   task_capabilities: # Specify the types of RMF Tasks that robots in this fleet are capable of performing
     loop: True
     delivery: True
-  # actions: ["some_action_here"]
   finishing_request: "nothing" # [park, charge, nothing]
   responsive_wait: True # Should responsive wait be on/off for the whole fleet by default? False if not specified.
   robots:
@@ -61,3 +60,12 @@ reference_coordinates:
           [-2.90519, 0.00186],
           [2.39611, -0.061773],
           [1.08783, -2.59750]]
+
+#
+plugins:
+  hello_world:
+    module: "free_fleet_examples.actions.hello_world"
+    actions: ["hello_world"]
+  # nav2_dock:
+  #   module: "free_fleet_adapter.actions.nav2_tb4_dock"
+  #   actions: ["nav2_tb4_dock", "nav2_tb4_undock"]
