--- a/free_fleet_examples/config/fleet/nav2_unique_multi_tb3_simulation_fleet_config.yaml
+++ b/free_fleet_examples/config/fleet/nav2_unique_multi_tb3_simulation_fleet_config.yaml
@@ -38,6 +38,7 @@ rmf_fleet:
       responsive_wait: False # Should responsive wait be on/off for this specific robot? Overrides the fleet-wide setting.
       # For Nav2RobotAdapter
       navigation_stack: 2
+      init_timeout_sec: 5
       initial_map: "L1"
       maps:
         L1:
@@ -49,6 +50,7 @@ rmf_fleet:
       responsive_wait: False # Should responsive wait be on/off for this specific robot? Overrides the fleet-wide setting.
       # For Nav2RobotAdapter
       navigation_stack: 2
+      init_timeout_sec: 5
       initial_map: "L1"
       maps:
         L1:
