--- a/free_fleet_examples/config/fleet/nav2_tb3_simulation_fleet_config.yaml
+++ b/free_fleet_examples/config/fleet/nav2_tb3_simulation_fleet_config.yaml
@@ -40,7 +40,7 @@ rmf_fleet:
       navigation_stack: 2
       initial_map: "L1"
       map_frame: "map"
-      base_footprint_frame: "base_link"
+      robot_frame: "base_link"
       maps:
         L1:
           map_url: "/opt/ros/jazzy/share/nav2_bringup/maps/tb3_sandbox.yaml"
