Add workflow_dispatch, and only for push on main
Signed-off-by: Aaron Chong <aaronchongth@gmail.com>

--- a/.github/workflows/nav2-integration-tests.yaml
+++ b/.github/workflows/nav2-integration-tests.yaml
@@ -1,6 +1,11 @@
 name: nav2-integration-tests
 
-on: [pull_request, push]
+on:
+  pull_request:
+  workflow_dispatch:
+  push:
+    branches: [main]
+
 defaults:
   run:
     shell: bash
