--- a/.github/workflows/nav1-integration-tests.yaml
+++ b/.github/workflows/nav1-integration-tests.yaml
@@ -1,6 +1,10 @@
 name: nav1-integration-tests
 
-on: [pull_request, push]
+on:
+  pull_request:
+  workflow_dispatch:
+  push:
+    branches: [main]
 
 jobs:
   integration-tests:
