--- a/.github/workflows/unit-tests.yaml
+++ b/.github/workflows/unit-tests.yaml
@@ -1,6 +1,10 @@
 name: unit-tests
 
-on: [pull_request, push]
+on:
+  pull_request:
+  workflow_dispatch:
+  push:
+    branches: [main]
 
 jobs:
   unit-tests:
