--- a/.github/workflows/nav2-integration-tests.yaml
+++ b/.github/workflows/nav2-integration-tests.yaml
@@ -1,6 +1,11 @@
 name: nav2-integration-tests
 
-on: push
+on:
+  pull_request:
+  workflow_dispatch:
+  push:
+    branches: [main]
+
 defaults:
   run:
     shell: bash
