Add robots to fleet during construction/initialization of robot adapters (#179)
* add robot to fleet in constructor

Signed-off-by: Aaron Chong <aaronchongth@gmail.com>

* Initialize the same way for nav1 robot adapter too

Signed-off-by: Aaron Chong <aaronchongth@gmail.com>

* Check for fleet handle before adding robot

Signed-off-by: Aaron Chong <aaronchongth@gmail.com>

* Remove sleeps from tests now the construction ensures initialization

Signed-off-by: Aaron Chong <aaronchongth@gmail.com>

* Raise runtime error when fleet is available and failed to add robot to fleet

Signed-off-by: Aaron Chong <aaronchongth@gmail.com>

---------

Signed-off-by: Aaron Chong <aaronchongth@gmail.com>

--- a/free_fleet_examples/config/fleet/nav1_tb3_simulation_fleet_config.yaml
+++ b/free_fleet_examples/config/fleet/nav1_tb3_simulation_fleet_config.yaml
@@ -38,6 +38,7 @@ rmf_fleet:
       responsive_wait: False # Should responsive wait be on/off for this specific robot? Overrides the fleet-wide setting.
       # For Nav1RobotAdapter
       navigation_stack: 1
+      init_timeout_sec: 5
       initial_map: "L1"
       map_frame: "map"
       robot_frame: "base_link"
