--- a/free_fleet_examples/config/fleet/nav1_tb3_simulation_fleet_config.yaml
+++ b/free_fleet_examples/config/fleet/nav1_tb3_simulation_fleet_config.yaml
@@ -41,7 +41,7 @@ rmf_fleet:
       init_timeout_sec: 5
       initial_map: "L1"
       map_frame: "map"
-      robot_frame: "base_link"
+      robot_frame: "base_footprint"
       maps:
         L1:
           # The nav1 robot will generally no access to this nav2_bringup package, this should point to where the nav1 map is stored.
