--- a/free_fleet_examples/config/fleet/nav2_tb3_simulation_fleet_config.yaml
+++ b/free_fleet_examples/config/fleet/nav2_tb3_simulation_fleet_config.yaml
@@ -41,7 +41,7 @@ rmf_fleet:
       init_timeout_sec: 5
       initial_map: "L1"
       map_frame: "map"
-      robot_frame: "base_link"
+      robot_frame: "base_footprint"
       maps:
         L1:
           map_url: "/opt/ros/jazzy/share/nav2_bringup/maps/tb3_sandbox.yaml"
