--- a/.github/workflows/nightly.yaml
+++ b/.github/workflows/nightly.yaml
@@ -1,9 +1,10 @@
 name: nightly
 
 on:
-  schedule:
-    # 2am SGT
-    - cron: '0 18 * * *'
+  # schedule:
+  #   # 2am SGT
+  #   - cron: '0 18 * * *'
+  push
 defaults:
   run:
     shell: bash
@@ -44,7 +45,7 @@ jobs:
           push: true
           build-args: |
             ROS_DISTRO=${{ matrix.ros_distribution }}
-            ZENOH_VERSION=1.1.0
+            ZENOH_VERSION=1.3.3
             FREE_FLEET_BRANCH=main
           tags: ghcr.io/${{ github.repository }}/minimal-zenoh-bridge-ros2dds:${{ matrix.ros_distribution }}-latest
           context: .github/docker/minimal-zenoh-bridge-ros2dds
@@ -123,7 +124,7 @@ jobs:
         uses: ./.github/actions/build-and-test
         with:
           ros-distribution: ${{ matrix.ros_distribution }}
-          zenoh-version: 1.1.0
+          zenoh-version: 1.3.3
           nav1-integration-testing: ON
 
       - name: Stop test fixture containers
@@ -156,7 +157,7 @@ jobs:
         uses: ./.github/actions/build-and-test
         with:
           ros-distribution: ${{ matrix.ros_distribution }}
-          zenoh-version: 1.1.0
+          zenoh-version: 1.3.3
           nav2-integration-testing: ON
 
       - name: Stop test fixture containers
@@ -189,7 +190,7 @@ jobs:
         run: |
           apt update
           apt install -y ros-${{ matrix.ros_distribution }}-rmw-cyclonedds-cpp python3-pip
-          pip3 install nudged eclipse-zenoh==1.1.0 pycdr2 rosbags --break-system-packages
+          pip3 install nudged eclipse-zenoh==1.3.3 pycdr2 rosbags --break-system-packages
           colcon mixin add default https://raw.githubusercontent.com/colcon/colcon-mixin-repository/master/index.yaml
           colcon mixin update default
           rosdep update
