--- a/free_fleet_examples/config/fleet/zc.yaml
+++ b/free_fleet_examples/config/fleet/zc.yaml
@@ -34,7 +34,7 @@ rmf_fleet:
   responsive_wait: True # Should responsive wait be on/off for the whole fleet by default? False if not specified.
   robots:
     qingxing0:
-      charger: "c1"
+      charger: "C0"
       responsive_wait: False # Should responsive wait be on/off for this specific robot? Overrides the fleet-wide setting.
       # For Nav2RobotAdapter
       navigation_stack: 2
@@ -45,6 +45,18 @@ rmf_fleet:
       maps:
         L1:
           map_url: "/opt/ros/jazzy/share/nav2_bringup/maps/tb3_sandbox.yaml"
+    # qingxing6:
+    #   charger: "C6"
+    #   responsive_wait: False # Should responsive wait be on/off for this specific robot? Overrides the fleet-wide setting.
+    #   # For Nav2RobotAdapter
+    #   navigation_stack: 2
+    #   init_timeout_sec: 50
+    #   initial_map: "L1"
+    #   map_frame: "map"
+    #   robot_frame: "base_footprint"
+    #   maps:
+    #     L1:
+    #       map_url: "/opt/ros/jazzy/share/nav2_bringup/maps/tb3_sandbox.yaml"
       # initial_pose: [-1.6000019311904907, -0.5031192898750305, 0]
 
   robot_state_update_frequency: 10.0 # Hz
