--- a/free_fleet_examples/config/fleet/zc.yaml
+++ b/free_fleet_examples/config/fleet/zc.yaml
@@ -29,7 +29,7 @@ rmf_fleet:
   task_capabilities: # Specify the types of RMF Tasks that robots in this fleet are capable of performing
     loop: True
     delivery: True
-  # actions: ["some_action_here"]
+  actions: ["hello"]
   finishing_request: "nothing" # [park, charge, nothing]
   responsive_wait: True # Should responsive wait be on/off for the whole fleet by default? False if not specified.
   robots:
