Fix broken nightly workflow file
Signed-off-by: Aaron Chong <aaronchongth@gmail.com>

--- a/.github/workflows/nightly.yaml
+++ b/.github/workflows/nightly.yaml
@@ -1,9 +1,10 @@
 name: nightly
 
-on:
-  schedule:
-    # 2am SGT
-    - cron: '0 18 * * *'
+  # on:
+  #   schedule:
+  #     # 2am SGT
+  #     - cron: '0 18 * * *'
+on: push
 defaults:
   run:
     shell: bash
@@ -50,7 +51,6 @@ jobs:
           context: .github/docker/minimal-zenoh-bridge-ros2dds
 
   nav1-integration-tests:
-    needs: build-minimal-nav1-docker-images
     timeout-minutes: 10
     runs-on: ubuntu-latest
     container:
