Add kilted, run builds on pr for now
Signed-off-by: Aaron Chong <aaronchongth@gmail.com>

--- a/.github/workflows/e2e-tests.yaml
+++ b/.github/workflows/e2e-tests.yaml
@@ -18,8 +18,7 @@ jobs:
       image: osrf/ros:${{ matrix.ros_distribution }}-desktop
     strategy:
       matrix:
-        ros_distribution:
-          - jazzy
+        ros_distribution: [jazzy, kilted]
 
     steps:
       - name: Checkout
