--- a/.github/workflows/nav1-integration-tests.yaml
+++ b/.github/workflows/nav1-integration-tests.yaml
@@ -15,8 +15,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        ros_distribution:
-          - jazzy
+        ros_distribution: [jazzy, kilted]
 
     steps:
       - name: Checkout
