--- a/.github/workflows/unit-tests.yaml
+++ b/.github/workflows/unit-tests.yaml
@@ -14,7 +14,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        ros_distribution: [jazzy, kilted, rolling]
+        ros_distribution: [jazzy, kilted]
     steps:
       - name: Checkout
         uses: actions/checkout@v1
@@ -23,5 +23,5 @@ jobs:
         uses: ./.github/actions/build-and-test
         with:
           ros-distribution: ${{ matrix.ros_distribution }}
-          zenoh-version: 1.3.3
+          zenoh-version: 1.5.0
           integration-testing: OFF
