Substitute distro for docker compose
Signed-off-by: Aaron Chong <aaronchongth@gmail.com>

--- a/.github/workflows/nav2-integration-tests.yaml
+++ b/.github/workflows/nav2-integration-tests.yaml
@@ -35,6 +35,8 @@ jobs:
           apt install docker-compose -y
 
       - name: Start test fixture containers
+        env:
+          ROS_DISTRO: ${{ matrix.ros_distribution }}
         run: docker-compose -f ".github/docker/integration-tests/nav2-docker-compose.yaml" up -d --build
 
       - name: build-and-test
