Revert trigger on pr
Signed-off-by: Aaron Chong <aaronchongth@gmail.com>

--- a/.github/workflows/nightly.yaml
+++ b/.github/workflows/nightly.yaml
@@ -1,10 +1,9 @@
 name: nightly
 
 on:
-  pull_request:
-  # schedule:
-  #   # 2am SGT
-  #   - cron: '0 18 * * *'
+  schedule:
+    # 2am SGT
+    - cron: '0 18 * * *'
 defaults:
   run:
     shell: bash
