--- a/.github/workflows/nightly.yaml
+++ b/.github/workflows/nightly.yaml
@@ -1,6 +1,7 @@
 name: nightly
 
 on:
+  pull_request:
   schedule:
     # 2am SGT
     - cron: '0 18 * * *'
@@ -9,45 +10,45 @@ defaults:
     shell: bash
 
 jobs:
-  build-minimal-nav2-docker-images:
-    name: Push minimal nav2 docker images to GitHub Packages
-    runs-on: ubuntu-latest
-    strategy:
-      fail-fast: false
-      matrix:
-        ros_distribution: [jazzy, kilted]
-    steps:
-      - uses: actions/checkout@v4
+  # build-minimal-nav2-docker-images:
+  #   name: Push minimal nav2 docker images to GitHub Packages
+  #   runs-on: ubuntu-latest
+  #   strategy:
+  #     fail-fast: false
+  #     matrix:
+  #       ros_distribution: [jazzy, kilted]
+  #   steps:
+  #     - uses: actions/checkout@v4
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
+  #     - name: Set up Docker Buildx
+  #       uses: docker/setup-buildx-action@v3
 
-      - name: Login to docker
-        uses: docker/login-action@v3
-        with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+  #     - name: Login to docker
+  #       uses: docker/login-action@v3
+  #       with:
+  #         registry: ghcr.io
+  #         username: ${{ github.actor }}
+  #         password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Build and push minimal-nav2-bringup
-        uses: docker/build-push-action@v5
-        with:
-          push: true
-          build-args: |
-            ROS_DISTRO=${{ matrix.ros_distribution }}
-          tags: ghcr.io/${{ github.repository }}/minimal-nav2-bringup:${{ matrix.ros_distribution }}-latest
-          context: .github/docker/minimal-nav2-bringup
+  #     - name: Build and push minimal-nav2-bringup
+  #       uses: docker/build-push-action@v5
+  #       with:
+  #         push: true
+  #         build-args: |
+  #           ROS_DISTRO=${{ matrix.ros_distribution }}
+  #         tags: ghcr.io/${{ github.repository }}/minimal-nav2-bringup:${{ matrix.ros_distribution }}-latest
+  #         context: .github/docker/minimal-nav2-bringup
 
-      - name: Build and push minimal-zenoh-bridge-ros2dds
-        uses: docker/build-push-action@v5
-        with:
-          push: true
-          build-args: |
-            ROS_DISTRO=${{ matrix.ros_distribution }}
-            ZENOH_VERSION=1.5.0
-            FREE_FLEET_BRANCH=main
-          tags: ghcr.io/${{ github.repository }}/minimal-zenoh-bridge-ros2dds:${{ matrix.ros_distribution }}-latest
-          context: .github/docker/minimal-zenoh-bridge-ros2dds
+  #     - name: Build and push minimal-zenoh-bridge-ros2dds
+  #       uses: docker/build-push-action@v5
+  #       with:
+  #         push: true
+  #         build-args: |
+  #           ROS_DISTRO=${{ matrix.ros_distribution }}
+  #           ZENOH_VERSION=1.5.0
+  #           FREE_FLEET_BRANCH=main
+  #         tags: ghcr.io/${{ github.repository }}/minimal-zenoh-bridge-ros2dds:${{ matrix.ros_distribution }}-latest
+  #         context: .github/docker/minimal-zenoh-bridge-ros2dds
 
   nav1-integration-tests:
     timeout-minutes: 10
@@ -92,7 +93,7 @@ jobs:
         run: gh workflow run retry-workflow.yaml -F run_id=${{ github.run_id }}
 
   nav2-integration-tests:
-    needs: build-minimal-nav2-docker-images
+    # needs: build-minimal-nav2-docker-images
     timeout-minutes: 10
     runs-on: ubuntu-latest
     container:
