Fix missing environment var
Signed-off-by: Aaron Chong <aaronchongth@gmail.com>

--- a/.github/workflows/nightly.yaml
+++ b/.github/workflows/nightly.yaml
@@ -69,6 +69,8 @@ jobs:
           sudo apt update && sudo apt install docker-compose -y
 
       - name: Start test fixture containers
+        env:
+          ZENOH_VERSION: 1.5.0
         run: docker-compose -f ".github/docker/integration-tests/nav1-docker-compose.yaml" up -d --build
 
       - name: build-and-test
@@ -82,15 +84,15 @@ jobs:
         if: always()
         run: docker-compose -f ".github/docker/integration-tests/nav1-docker-compose.yaml" down
 
-  # retry-nav1-integration-tests-on-failure:
-  #   if: failure() && fromJSON(github.run_attempt) < 3
-  #   needs: [nav1-integration-tests]
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - env:
-  #         GH_REPO: ${{ github.repository }}
-  #         GH_TOKEN: ${{ github.token }}
-  #       run: gh workflow run retry-workflow.yaml -F run_id=${{ github.run_id }}
+  retry-nav1-integration-tests-on-failure:
+    if: failure() && fromJSON(github.run_attempt) < 3
+    needs: [nav1-integration-tests]
+    runs-on: ubuntu-latest
+    steps:
+      - env:
+          GH_REPO: ${{ github.repository }}
+          GH_TOKEN: ${{ github.token }}
+        run: gh workflow run retry-workflow.yaml -F run_id=${{ github.run_id }}
 
   nav2-integration-tests:
     needs: build-minimal-nav2-docker-images
@@ -114,6 +116,7 @@ jobs:
       - name: Start test fixture containers
         env:
           ROS_DISTRO: ${{ matrix.ros_distribution }}
+          ZENOH_VERSION: 1.5.0
         run: docker-compose -f ".github/docker/integration-tests/nav2-docker-compose.yaml" up -d --build
 
       - name: build-and-test
@@ -127,15 +130,15 @@ jobs:
         if: always()
         run: docker-compose -f ".github/docker/integration-tests/nav2-docker-compose.yaml" down
 
-  # retry-nav2-integration-tests-on-failure:
-  #   if: failure() && fromJSON(github.run_attempt) < 3
-  #   needs: [nav2-integration-tests]
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - env:
-  #         GH_REPO: ${{ github.repository }}
-  #         GH_TOKEN: ${{ github.token }}
-  #       run: gh workflow run retry-workflow.yaml -F run_id=${{ github.run_id }}
+  retry-nav2-integration-tests-on-failure:
+    if: failure() && fromJSON(github.run_attempt) < 3
+    needs: [nav2-integration-tests]
+    runs-on: ubuntu-latest
+    steps:
+      - env:
+          GH_REPO: ${{ github.repository }}
+          GH_TOKEN: ${{ github.token }}
+        run: gh workflow run retry-workflow.yaml -F run_id=${{ github.run_id }}
 
   e2e-tests:
     needs: nav2-integration-tests
@@ -159,6 +162,7 @@ jobs:
       - name: Start test fixture
         env:
           ROS_DISTRO: ${{ matrix.ros_distribution }}
+          ZENOH_VERSION: 1.5.0
         run: docker-compose -f ".github/docker/integration-tests/nav2-docker-compose.yaml" up -d --build
 
       - name: Setup
@@ -191,12 +195,12 @@ jobs:
         if: always()
         run: docker-compose -f ".github/docker/integration-tests/nav2-docker-compose.yaml" down
 
-  # retry-e2e-tests-on-failure:
-  #   if: failure() && fromJSON(github.run_attempt) < 3
-  #   needs: [e2e-tests]
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - env:
-  #         GH_REPO: ${{ github.repository }}
-  #         GH_TOKEN: ${{ github.token }}
-  #       run: gh workflow run retry-workflow.yaml -F run_id=${{ github.run_id }}
+  retry-e2e-tests-on-failure:
+    if: failure() && fromJSON(github.run_attempt) < 3
+    needs: [e2e-tests]
+    runs-on: ubuntu-latest
+    steps:
+      - env:
+          GH_REPO: ${{ github.repository }}
+          GH_TOKEN: ${{ github.token }}
+        run: gh workflow run retry-workflow.yaml -F run_id=${{ github.run_id }}
