use global env var for zenoh version, update with issue ticket for kilted tf_transformations, remove retries for nav2 and e2e
Signed-off-by: Aaron Chong <aaronchongth@gmail.com>

--- a/.github/actions/build-and-test/action.yaml
+++ b/.github/actions/build-and-test/action.yaml
@@ -25,11 +25,11 @@ runs:
         pip3 install eclipse-zenoh==${{ inputs.zenoh-version }} pycdr2 rosbags --break-system-packages
       shell: bash
 
-    # Due to https://github.com/DLu/tf_transformations?tab=readme-ov-file#installation and unreleased binaries
+    # Due to https://github.com/DLu/tf_transformations/issues/15
     - name: install transforms3d
       if: ${{ inputs.ros-distribution != 'jazzy' }}
       run: |
-        sudo pip3 install transforms3d --break-system-packages
+          sudo apt install python3-transforms3d
       shell: bash
 
     - uses: ros-tooling/setup-ros@v0.7
