--- a/.github/workflows/nav1-integration-tests.yaml
+++ b/.github/workflows/nav1-integration-tests.yaml
@@ -6,6 +6,9 @@ on:
   push:
     branches: [main]
 
+env:
+  ZENOH_VERSION: 1.5.0
+
 jobs:
   integration-tests:
     timeout-minutes: 10
@@ -27,14 +30,14 @@ jobs:
 
       - name: Start test fixture containers
         env:
-          ZENOH_VERSION: 1.5.0
+          ZENOH_VERSION: ${{ env.ZENOH_VERSION }}
         run: docker-compose -f ".github/docker/integration-tests/nav1-docker-compose.yaml" up -d --build
 
       - name: build-and-test
         uses: ./.github/actions/build-and-test
         with:
           ros-distribution: ${{ matrix.ros_distribution }}
-          zenoh-version: 1.5.0
+          zenoh-version: ${{ env.ZENOH_VERSION }}
           nav1-integration-testing: ON
 
       - name: Stop test fixture containers
