--- a/.github/workflows/nightly.yaml
+++ b/.github/workflows/nightly.yaml
@@ -8,6 +8,9 @@ defaults:
   run:
     shell: bash
 
+env:
+  ZENOH_VERSION: 1.5.0
+
 jobs:
   build-minimal-nav2-docker-images:
     name: Push minimal nav2 docker images to GitHub Packages
@@ -44,7 +47,7 @@ jobs:
           push: true
           build-args: |
             ROS_DISTRO=${{ matrix.ros_distribution }}
-            ZENOH_VERSION=1.5.0
+            ZENOH_VERSION=${{ env.ZENOH_VERSION }}
             FREE_FLEET_BRANCH=main
           tags: ghcr.io/${{ github.repository }}/minimal-zenoh-bridge-ros2dds:${{ matrix.ros_distribution }}-latest
           context: .github/docker/minimal-zenoh-bridge-ros2dds
@@ -69,14 +72,14 @@ jobs:
 
       - name: Start test fixture containers
         env:
-          ZENOH_VERSION: 1.5.0
+          ZENOH_VERSION: ${{ env.ZENOH_VERSION }}
         run: docker-compose -f ".github/docker/integration-tests/nav1-docker-compose.yaml" up -d --build
 
       - name: build-and-test
         uses: ./.github/actions/build-and-test
         with:
           ros-distribution: ${{ matrix.ros_distribution }}
-          zenoh-version: 1.5.0
+          zenoh-version: ${{ env.ZENOH_VERSION }}
           nav1-integration-testing: ON
 
       - name: Stop test fixture containers
@@ -115,29 +118,19 @@ jobs:
       - name: Start test fixture containers
         env:
           ROS_DISTRO: ${{ matrix.ros_distribution }}
-          ZENOH_VERSION: 1.5.0
+          ZENOH_VERSION: ${{ env.ZENOH_VERSION }}
         run: docker-compose -f ".github/docker/integration-tests/nav2-docker-compose.yaml" up -d --build
 
       - name: build-and-test
         uses: ./.github/actions/build-and-test
         with:
           ros-distribution: ${{ matrix.ros_distribution }}
-          zenoh-version: 1.5.0
+          zenoh-version: ${{ env.ZENOH_VERSION }}
           nav2-integration-testing: ON
 
       - name: Stop test fixture containers
         if: always()
         run: docker-compose -f ".github/docker/integration-tests/nav2-docker-compose.yaml" down
-
-  retry-nav2-integration-tests-on-failure:
-    if: failure() && fromJSON(github.run_attempt) < 3
-    needs: [nav2-integration-tests]
-    runs-on: ubuntu-latest
-    steps:
-      - env:
-          GH_REPO: ${{ github.repository }}
-          GH_TOKEN: ${{ github.token }}
-        run: gh workflow run retry-workflow.yaml -F run_id=${{ github.run_id }}
 
   e2e-tests:
     needs: nav2-integration-tests
@@ -161,24 +154,24 @@ jobs:
       - name: Start test fixture
         env:
           ROS_DISTRO: ${{ matrix.ros_distribution }}
-          ZENOH_VERSION: 1.5.0
+          ZENOH_VERSION: ${{ env.ZENOH_VERSION }}
         run: docker-compose -f ".github/docker/integration-tests/nav2-docker-compose.yaml" up -d --build
 
       - name: Setup
         run: |
           apt update
           apt install -y ros-${{ matrix.ros_distribution }}-rmw-cyclonedds-cpp python3-pip
-          pip3 install nudged eclipse-zenoh==1.5.0 pycdr2 rosbags --break-system-packages
+          pip3 install nudged eclipse-zenoh==${{ env.ZENOH_VERSION }} pycdr2 rosbags --break-system-packages
           colcon mixin add default https://raw.githubusercontent.com/colcon/colcon-mixin-repository/master/index.yaml
           colcon mixin update default
           rosdep update
           rosdep install --from-paths . -yir
 
-      # Due to https://github.com/DLu/tf_transformations?tab=readme-ov-file#installation and unreleased binaries
+      # Due to https://github.com/DLu/tf_transformations/issues/15
       - name: install transforms3d
         if: ${{ matrix.ros_distribution != 'jazzy' }}
         run: |
-          sudo pip3 install transforms3d --break-system-packages
+          sudo apt install python3-transforms3d
         shell: bash
 
       - name: Build
@@ -193,13 +186,3 @@ jobs:
       - name: Stop test fixture containers
         if: always()
         run: docker-compose -f ".github/docker/integration-tests/nav2-docker-compose.yaml" down
-
-  retry-e2e-tests-on-failure:
-    if: failure() && fromJSON(github.run_attempt) < 3
-    needs: [e2e-tests]
-    runs-on: ubuntu-latest
-    steps:
-      - env:
-          GH_REPO: ${{ github.repository }}
-          GH_TOKEN: ${{ github.token }}
-        run: gh workflow run retry-workflow.yaml -F run_id=${{ github.run_id }}
