Add kilted, run builds on pr for now (#211)
* Add kilted, run builds on pr for now

Signed-off-by: Aaron Chong <aaronchongth@gmail.com>

* Bump version of ros-tooling/action-ros-ci

Signed-off-by: Aaron Chong <aaronchongth@gmail.com>

* disable fail fast

Signed-off-by: Aaron Chong <aaronchongth@gmail.com>

* Manually install transforms3d

Signed-off-by: Aaron Chong <aaronchongth@gmail.com>

* Break system packages

Signed-off-by: Aaron Chong <aaronchongth@gmail.com>

* Install transforms3d for e2e too

Signed-off-by: Aaron Chong <aaronchongth@gmail.com>

* Remove rolling, bump zenoh to 1.5.0

Signed-off-by: Aaron Chong <aaronchongth@gmail.com>

* Substitute distro for docker compose

Signed-off-by: Aaron Chong <aaronchongth@gmail.com>

* Check for equality on kilted instead

Signed-off-by: Aaron Chong <aaronchongth@gmail.com>

* revert to != jazzy

Signed-off-by: Aaron Chong <aaronchongth@gmail.com>

* Revert trigger on pr

Signed-off-by: Aaron Chong <aaronchongth@gmail.com>

* Specify version of zenoh router

Signed-off-by: Aaron Chong <aaronchongth@gmail.com>

* Add retry workflows for each of thee2e tests

Signed-off-by: Aaron Chong <aaronchongth@gmail.com>

* Try nightly without building images, add retry to e2e-tests

Signed-off-by: Aaron Chong <aaronchongth@gmail.com>

* Build images anyway to test issue

Signed-off-by: Aaron Chong <aaronchongth@gmail.com>

* Remove retry from nightly

Signed-off-by: Aaron Chong <aaronchongth@gmail.com>

* Fix missing environment var

Signed-off-by: Aaron Chong <aaronchongth@gmail.com>

* revert run on pr

Signed-off-by: Aaron Chong <aaronchongth@gmail.com>

* use global env var for zenoh version, update with issue ticket for kilted tf_transformations, remove retries for nav2 and e2e

Signed-off-by: Aaron Chong <aaronchongth@gmail.com>

* Adding retries back to e2e tests for kilted

Signed-off-by: Aaron Chong <aaronchongth@gmail.com>

* Remove kilted from e2e testing, remove retries for e2e tests

Signed-off-by: Aaron Chong <

--- a/.github/workflows/nav2-integration-tests.yaml
+++ b/.github/workflows/nav2-integration-tests.yaml
@@ -10,6 +10,9 @@ defaults:
   run:
     shell: bash
 
+env:
+  ZENOH_VERSION: 1.5.0
+
 jobs:
   integration-tests:
     timeout-minutes: 10
@@ -19,8 +22,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        ros_distribution:
-          - jazzy
+        ros_distribution: [jazzy, kilted]
 
     steps:
       - name: Checkout
@@ -36,13 +38,16 @@ jobs:
           apt install docker-compose -y
 
       - name: Start test fixture containers
+        env:
+          ROS_DISTRO: ${{ matrix.ros_distribution }}
+          ZENOH_VERSION: ${{ env.ZENOH_VERSION }}
         run: docker-compose -f ".github/docker/integration-tests/nav2-docker-compose.yaml" up -d --build
 
       - name: build-and-test
         uses: ./.github/actions/build-and-test
         with:
           ros-distribution: ${{ matrix.ros_distribution }}
-          zenoh-version: 1.3.3
+          zenoh-version: ${{ env.ZENOH_VERSION }}
           nav2-integration-testing: ON
 
       - name: Stop test fixture containers
