--- a/.github/workflows/e2e-tests.yaml
+++ b/.github/workflows/e2e-tests.yaml
@@ -10,6 +10,9 @@ defaults:
   run:
     shell: bash
 
+env:
+  ZENOH_VERSION: 1.5.0
+
 jobs:
   e2e-tests:
     timeout-minutes: 10
@@ -18,8 +21,7 @@ jobs:
       image: osrf/ros:${{ matrix.ros_distribution }}-desktop
     strategy:
       matrix:
-        ros_distribution:
-          - jazzy
+        ros_distribution: [jazzy]
 
     steps:
       - name: Checkout
@@ -30,17 +32,27 @@ jobs:
           sudo apt update && sudo apt install docker-compose -y
 
       - name: Start test fixture containers
+        env:
+          ROS_DISTRO: ${{ matrix.ros_distribution }}
+          ZENOH_VERSION: ${{ env.ZENOH_VERSION }}
         run: docker-compose -f ".github/docker/integration-tests/nav2-docker-compose.yaml" up -d --build
 
       - name: Setup
         run: |
           apt update
           apt install -y ros-${{ matrix.ros_distribution }}-rmw-cyclonedds-cpp python3-pip
-          pip3 install nudged eclipse-zenoh==1.3.3 pycdr2 rosbags --break-system-packages
+          pip3 install nudged eclipse-zenoh==${{ env.ZENOH_VERSION }} pycdr2 rosbags --break-system-packages
           colcon mixin add default https://raw.githubusercontent.com/colcon/colcon-mixin-repository/master/index.yaml
           colcon mixin update default
           rosdep update
           rosdep install --from-paths . -yir
+
+      # Due to https://github.com/DLu/tf_transformations/issues/15
+      - name: install transforms3d
+        if: ${{ matrix.ros_distribution != 'jazzy' }}
+        run: |
+          sudo apt install python3-transforms3d
+        shell: bash
 
       - name: Build
         run: /ros_entrypoint.sh colcon build --packages-up-to free_fleet_examples --event-handlers=console_cohesion+ --mixin release --cmake-args -DNAV2_INTEGRATION_TESTING=ON
