--- a/.github/workflows/nav1-integration-tests.yaml
+++ b/.github/workflows/nav1-integration-tests.yaml
@@ -6,6 +6,9 @@ on:
   push:
     branches: [main]
 
+env:
+  ZENOH_VERSION: 1.5.0
+
 jobs:
   integration-tests:
     timeout-minutes: 10
@@ -15,8 +18,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        ros_distribution:
-          - jazzy
+        ros_distribution: [jazzy, kilted]
 
     steps:
       - name: Checkout
@@ -27,13 +29,15 @@ jobs:
           sudo apt update && sudo apt install docker-compose -y
 
       - name: Start test fixture containers
+        env:
+          ZENOH_VERSION: ${{ env.ZENOH_VERSION }}
         run: docker-compose -f ".github/docker/integration-tests/nav1-docker-compose.yaml" up -d --build
 
       - name: build-and-test
         uses: ./.github/actions/build-and-test
         with:
           ros-distribution: ${{ matrix.ros_distribution }}
-          zenoh-version: 1.3.3
+          zenoh-version: ${{ env.ZENOH_VERSION }}
           nav1-integration-testing: ON
 
       - name: Stop test fixture containers
