--- a/.github/workflows/nightly.yaml
+++ b/.github/workflows/nightly.yaml
@@ -8,6 +8,9 @@ defaults:
   run:
     shell: bash
 
+env:
+  ZENOH_VERSION: 1.5.0
+
 jobs:
   build-minimal-nav2-docker-images:
     name: Push minimal nav2 docker images to GitHub Packages
@@ -15,7 +18,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        ros_distribution: [jazzy]
+        ros_distribution: [jazzy, kilted]
     steps:
       - uses: actions/checkout@v4
 
@@ -44,7 +47,7 @@ jobs:
           push: true
           build-args: |
             ROS_DISTRO=${{ matrix.ros_distribution }}
-            ZENOH_VERSION=1.3.3
+            ZENOH_VERSION=${{ env.ZENOH_VERSION }}
             FREE_FLEET_BRANCH=main
           tags: ghcr.io/${{ github.repository }}/minimal-zenoh-bridge-ros2dds:${{ matrix.ros_distribution }}-latest
           context: .github/docker/minimal-zenoh-bridge-ros2dds
@@ -55,9 +58,9 @@ jobs:
     container:
       image: osrf/ros:${{ matrix.ros_distribution }}-desktop
     strategy:
+      fail-fast: false
       matrix:
-        ros_distribution:
-          - jazzy
+        ros_distribution: [jazzy, kilted]
 
     steps:
       - name: Checkout
@@ -68,18 +71,30 @@ jobs:
           sudo apt update && sudo apt install docker-compose -y
 
       - name: Start test fixture containers
+        env:
+          ZENOH_VERSION: ${{ env.ZENOH_VERSION }}
         run: docker-compose -f ".github/docker/integration-tests/nav1-docker-compose.yaml" up -d --build
 
       - name: build-and-test
         uses: ./.github/actions/build-and-test
         with:
           ros-distribution: ${{ matrix.ros_distribution }}
-          zenoh-version: 1.3.3
+          zenoh-version: ${{ env.ZENOH_VERSION }}
           nav1-integration-testing: ON
 
       - name: Stop test fixture containers
         if: always()
         run: docker-compose -f ".github/docker/integration-tests/nav1-docker-compose.yaml" down
+
+  retry-nav1-integration-tests-on-failure:
+    if: failure() && fromJSON(github.run_attempt) < 3
+    needs: [nav1-integration-tests]
+    runs-on: ubuntu-latest
+    steps:
+      - env:
+          GH_REPO: ${{ github.repository }}
+          GH_TOKEN: ${{ github.token }}
+        run: gh workflow run retry-workflow.yaml -F run_id=${{ github.run_id }}
 
   nav2-integration-tests:
     needs: build-minimal-nav2-docker-images
@@ -88,9 +103,9 @@ jobs:
     container:
       image: osrf/ros:${{ matrix.ros_distribution }}-desktop
     strategy:
+      fail-fast: false
       matrix:
-        ros_distribution:
-          - jazzy
+        ros_distribution: [jazzy, kilted]
 
     steps:
       - name: Checkout
@@ -101,13 +116,16 @@ jobs:
           sudo apt update && sudo apt install docker-compose -y
 
       - name: Start test fixture containers
+        env:
+          ROS_DISTRO: ${{ matrix.ros_distribution }}
+          ZENOH_VERSION: ${{ env.ZENOH_VERSION }}
         run: docker-compose -f ".github/docker/integration-tests/nav2-docker-compose.yaml" up -d --build
 
       - name: build-and-test
         uses: ./.github/actions/build-and-test
         with:
           ros-distribution: ${{ matrix.ros_distribution }}
-          zenoh-version: 1.3.3
+          zenoh-version: ${{ env.ZENOH_VERSION }}
           nav2-integration-testing: ON
 
       - name: Stop test fixture containers
@@ -121,9 +139,9 @@ jobs:
     container:
       image: osrf/ros:${{ matrix.ros_distribution }}-desktop
     strategy:
+      fail-fast: false
       matrix:
-        ros_distribution:
-          - jazzy
+        ros_distribution: [jazzy]
 
     steps:
       - name: Checkout
@@ -133,18 +151,28 @@ jobs:
         run: |
           sudo apt update && sudo apt install docker-compose -y
 
-      - name: Start test fixture containers
+      - name: Start test fixture
+        env:
+          ROS_DISTRO: ${{ matrix.ros_distribution }}
+          ZENOH_VERSION: ${{ env.ZENOH_VERSION }}
         run: docker-compose -f ".github/docker/integration-tests/nav2-docker-compose.yaml" up -d --build
 
       - name: Setup
         run: |
           apt update
           apt install -y ros-${{ matrix.ros_distribution }}-rmw-cyclonedds-cpp python3-pip
-          pip3 install nudged eclipse-zenoh==1.3.3 pycdr2 rosbags --break-system-packages
+          pip3 install nudged eclipse-zenoh==${{ env.ZENOH_VERSION }} pycdr2 rosbags --break-system-packages
           colcon mixin add default https://raw.githubusercontent.com/colcon/colcon-mixin-repository/master/index.yaml
           colcon mixin update default
           rosdep update
           rosdep install --from-paths . -yir
+
+      # Due to https://github.com/DLu/tf_transformations/issues/15
+      - name: install transforms3d
+        if: ${{ matrix.ros_distribution != 'jazzy' }}
+        run: |
+          sudo apt install python3-transforms3d
+        shell: bash
 
       - name: Build
         run: /ros_entrypoint.sh colcon build --packages-up-to free_fleet_examples --event-handlers=console_cohesion+ --mixin release --cmake-args -DNAV2_INTEGRATION_TESTING=ON
