--- a/.github/workflows/unit-tests.yaml
+++ b/.github/workflows/unit-tests.yaml
@@ -6,6 +6,9 @@ on:
   push:
     branches: [main]
 
+env:
+  ZENOH_VERSION: 1.5.0
+
 jobs:
   unit-tests:
     runs-on: ubuntu-latest
@@ -14,9 +17,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        ros_distribution:
-          - jazzy
-          - rolling
+        ros_distribution: [jazzy, kilted]
     steps:
       - name: Checkout
         uses: actions/checkout@v1
@@ -25,5 +26,5 @@ jobs:
         uses: ./.github/actions/build-and-test
         with:
           ros-distribution: ${{ matrix.ros_distribution }}
-          zenoh-version: 1.3.3
+          zenoh-version: ${{ env.ZENOH_VERSION }}
           integration-testing: OFF
